# ai-rules

./: README.md  ai-rules.code-workspace  implementation-comparison.md  mcp-rule-management-python-plan.md  mcp-server-configuration-guide.md
.claude/commands/: rule-list.md  session-list.md
.claude/rules/: java-best-practices-2024-2025.md  solid-best-practices.md  vscode-ju-mcp-2025-08.md
.claude/sessions/: 2025-08-11-1801-Claude Context Injection.md  2025-08-11-1801-GitHub Projects synchronization project.md
ai-rules/: python-best-practices-2024-2025.md
ai-rules-hooks/: README.md  pyproject.toml  requirements.txt
ai-rules-hooks/.claude/hooks/: rule_base.py  rule_injector.py  session_rules_injector.py
ai-rules-hooks/config/: generation_prompts.md  rules_config.yaml  update_config.yaml
ai-rules-hooks/logs/session_cache/: c53d892b-bcab-4d1b-ab20-dfb301c5aee3.json
ai-rules-hooks/rules/: bifrost-mcp-code-modification-rules-2025-08.md  github-best-practices-2024-2025.md  typescript-best-practices-2025.md
ai-rules-hooks/scripts/: setup.py  uninstall.py  update_rules.py
ai-rules-hooks/templates/: rule_template.md
ai-rules-typescript/: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
ai-rules-typescript/src/: mcp-server.ts  rule-management-server.ts
ai-rules-typescript/src/config/: environment.ts
ai-rules-typescript/src/services/: ContextInjector.ts  NotificationService.ts  (+5 more)
docs/plans/: hooks-solution.md  mcp-rule-management-nodejs-plan.md
(+4 files in other folders)
